Make keyword hint view ("press tab to search foo.com") clickable.

Since there is no tab button on touch devices (on screen keyboard has
no tab), the view will need to be clickable. This might as well apply to
all devices, physical keyboard or no.

As noted on the bug, the view's appearance will also change to
something that makes more sense when you don't have a tab key.

BUG=698422

Review-Url: https://codereview.chromium.org/2792103005
Cr-Commit-Position: refs/heads/master@{#462315}

Former-commit-id: ba63e101443732a1eddcc0ea63eb26cdb0ec33fe